--- a/src/shared/styles/colors.css
+++ b/src/shared/styles/colors.css
@@ -9,13 +9,13 @@
   --color-white-0: #ffffff00;
 
   /* GRAY */
-  --color-gray-50: #ededf1;
-  --color-gray-100: #b6b7c3;
-  --color-gray-200: #707287;
-  --color-gray-300: #5a5b6f;
-  --color-gray-400: #373745;
-  --color-gray-500: #262630;
-  --color-gray-600: #0a0a11;
+  --color-gray-50: #ebeef5;
+  --color-gray-100: #c9d2e3;
+  --color-gray-200: #8191b1;
+  --color-gray-300: #2c374e;
+  --color-gray-400: #1c2436;
+  --color-gray-500: #151b28;
+  --color-gray-600: #0e121b;
 
   /* PURPLE */
   --color-purple-50: #c1c8ff;
@@ -26,27 +26,22 @@
   --color-purple-500: #32258a;
 
   /* YELLOW */
-  --color-yellow-50: #fffce7;
-  --color-yellow-100: #fff7c6;
-  --color-yellow-200: #fff198;
-
-  /* CYAN */
-  --color-cyan-50: #f1fcfe;
-  --color-cyan-100: #def7fd;
-  --color-cyan-200: #c5f1fc;
+  --color-yellow-50: #fff3ac;
+  --color-yellow-100: #f9e56f;
+  --color-yellow-200: #ffe233;
 
   /* BLUE */
-  --color-blue-50: #e6f1fe;
-  --color-blue-100: #b0d4fb;
-  --color-blue-200: #8abff9;
+  --color-blue-50: #daebfe;
+  --color-blue-100: #9ccbff;
+  --color-blue-200: #4ca1fe;
 
   /* GREEN */
-  --color-green-50: #ecf9f0;
-  --color-green-100: #d2f2dc;
-  --color-green-200: #aee7c0;
+  --color-green-50: #deffe8;
+  --color-green-100: #9cf5b8;
+  --color-green-200: #56d47e;
 
   /* RED */
-  --color-red-50: #ffeeee;
-  --color-red-100: #fecacb;
-  --color-red-200: #fe8d8f;
+  --color-red-50: #ffe9e9;
+  --color-red-100: #ffcacb;
+  --color-red-200: #fe8d79;
 }
