--- a/src/shared/styles/colors.css
+++ b/src/shared/styles/colors.css
@@ -26,7 +26,7 @@
   --color-purple-500: #32258a;
 
   /* YELLOW */
-  --color-yellow-50: #fff3ac;
+  --color-yellow-50: #fffce7;
   --color-yellow-100: #f9e56f;
   --color-yellow-200: #ffe233;
 
