feat: modal 컴포넌트 추가

--- a/src/shared/styles/colors.css
+++ b/src/shared/styles/colors.css
@@ -118,5 +118,5 @@
   --color-border-warning: var(--color-yellow-100);
 
   /* MATERIAL */
-  --color-dimmest: var(--color-black-50);
+  --color-dimmer: var(--color-black-50);
 }
