--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -7,3 +7,14 @@
 @import "swiper/css";
 @import "swiper/css/free-mode";
 @import "swiper/css/scrollbar";
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox  */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
