--- a/src/shared/styles/spacing.css
+++ b/src/shared/styles/spacing.css
@@ -8,6 +8,7 @@
   --spacing-2xl: 24px;
   --spacing-3xl: 28px;
   --spacing-4xl: 32px;
+  --spacing-5xl: 44px;
   --spacing-8xl: 48px;
   --spacing-11xl: 60px;
 }
