fix: 달력 > 숫자 스타일 조정

--- a/src/shared/styles/typos.css
+++ b/src/shared/styles/typos.css
@@ -152,6 +152,13 @@
   letter-spacing: var(--tracking-02);
 }
 
+@utility typo-lb-md-normal {
+  font-size: var(--text-02);
+  font-weight: var(--font-weight-medium);
+  line-height: var(--spacing-01);
+  letter-spacing: var(--tracking-02);
+}
+
 @utility typo-lb-sm-normal {
   font-size: var(--text-01);
   font-weight: var(--font-weight-medium);
